; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm.c_vmm_init.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm.c_vmm_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vmm_ops_intel = common dso_local global i32 0, align 4
@ops = common dso_local global i32* null, align 8
@vmm_initialized = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vmm_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @vmm_host_state_init()
  %4 = call i32 (...) @vmm_mem_init()
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = load i32, i32* %2, align 4
  store i32 %8, i32* %1, align 4
  br label %16

9:                                                ; preds = %0
  store i32* @vmm_ops_intel, i32** @ops, align 8
  %10 = call i32 (...) @VMM_INIT()
  store i32 %10, i32* %2, align 4
  %11 = load i32, i32* %2, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %9
  store i32 1, i32* @vmm_initialized, align 4
  br label %14

14:                                               ; preds = %13, %9
  %15 = load i32, i32* %2, align 4
  store i32 %15, i32* %1, align 4
  br label %16

16:                                               ; preds = %14, %7
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i32 @vmm_host_state_init(...) #1

declare dso_local i32 @vmm_mem_init(...) #1

declare dso_local i32 @VMM_INIT(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
